# sqld

./: Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.dev  LICENSE.md  Makefile  README.md  RELEASE_NOTES.md  rust-toolchain.toml
.github/workflows/: bottomless_smoke_test.yml  pr-images.yml  publish.yml  release.yml  rust.yml
bottomless/: Cargo.toml  Makefile
bottomless-cli/: Cargo.toml
bottomless-cli/src/: main.rs  replicator_extras.rs
bottomless/src/: backup.rs  copy.rs  ffi.rs  lib.rs  read.rs  replicator.rs  replicator2.rs  s3.rs  transaction_cache.rs  uuid_utils.rs  wal.rs  write.rs
bottomless/test/: minio-start.sh  restore_test.sql  smoke_test.sql
client/: Cargo.toml
client/src/: lib.rs  postgres.rs
crates/bottomless/: Makefile
docs/: BUILD-RUN.md  CONSISTENCY_MODEL.md  HRANA_2_SPEC.md  HRANA_3_SPEC.md  HTTP_V1_SPEC.md  HTTP_V2_SPEC.md  LINC.md  USER_GUIDE.md  hrana_c3_spec.md  http_api.md
libsql-bindings/: Cargo.toml
libsql-client/: Cargo.toml
libsql-client/src/: connection.rs  lib.rs  local.rs  reqwest.rs  statement.rs
libsql-server/: Cargo.toml
libsql-server/src/: lib.rs  main.rs  query_analysis.rs
libsql-server/src/connection/: libsql.rs  write_proxy.rs
libsql-server/src/hrana/: batch.rs  stmt.rs
libsql-server/src/hrana/ws/: conn.rs
libsql-server/src/http/admin/: mod.rs
libsql-server/src/namespace/: mod.rs
libsql-server/src/rpc/: proxy.rs
libsqlx/: Cargo.toml
libsqlx-server/: Cargo.toml
libsqlx-server/assets/test/: simple-log
libsqlx-server/src/: compactor.rs  config.rs  database.rs  error.rs  main.rs  manager.rs  meta.rs  replica_commit_store.rs  snapshot_store.rs
libsqlx-server/src/allocation/: config.rs  error.rs  mod.rs  primary.rs  replica.rs  timeout_notifier.rs
libsqlx-server/src/allocation/primary/: compactor.rs  mod.rs
libsqlx-server/src/databases/: mod.rs  store.rs
libsqlx-server/src/hrana/: batch.rs  error.rs  mod.rs  result_builder.rs  stmt.rs
libsqlx-server/src/hrana/http/: mod.rs  request.rs  stream.rs
libsqlx-server/src/hrana/ws/: mod.rs
libsqlx-server/src/http/: admin.rs  user.rs
libsqlx-server/src/http/user/: error.rs  extractors.rs  mod.rs
libsqlx-server/src/linc/: bus.rs  connection.rs  connection_pool.rs  handler.rs  mod.rs  net.rs  proto.rs  server.rs
libsqlx/src/: analysis.rs  connection.rs  error.rs  lib.rs  program.rs  query.rs  result_builder.rs  seal.rs  semaphore.rs
libsqlx/src/database/: frame.rs  mod.rs  test_utils.rs
libsqlx/src/database/libsql/: connection.rs  mod.rs
libsqlx/src/database/libsql/injector/: hook.rs  mod.rs
libsqlx/src/database/libsql/replication_log/: frame_stream.rs  logger.rs  merger.rs  mod.rs  snapshot.rs
libsqlx/src/database/proxy/: connection.rs  database.rs  mod.rs
pypackages/libsql-client/libsql_client/: http_driver.py
scripts/: install-deps.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/src/server/: http.rs  mod.rs
sqld/: Cargo.toml  build.rs
sqld-libsql-bindings/: Cargo.toml
sqld-libsql-bindings/src/: lib.rs  wal_hook.rs
sqld-libsql-bindings/src/ffi/: mod.rs  types.rs
sqld/proto/: proxy.proto  replication_log.proto
sqld/src/: admin_api.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  metrics.rs  migration.rs  namespace.rs  net.rs  query.rs  query_analysis.rs  query_result_builder.rs  system.rs  wal_logger.rs
sqld/src/connection/: config.rs  libsql.rs  mod.rs  write_proxy.rs
sqld/src/database/: config.rs  connection.rs  factory.rs  libsql.rs  mod.rs  service.rs  vfs.rs  write_proxy.rs
sqld/src/database/backbone/: mod.rs  (+3 more)
sqld/src/hrana/: batch.rs  conn.rs  cursor.rs  handshake.rs  mod.rs  proto.rs  protobuf.rs  result_builder.rs  session.rs  stmt.rs
sqld/src/http/: auth.rs  db_factory.rs  dump.rs  either.rs  hrana_over_http_1.rs  mod.rs  result_builder.rs  stats.rs  types.rs
sqld/src/libsql/: mod.rs
sqld/src/namespace/: fork.rs  mod.rs
sqld/src/postgres/: authenticator.rs  handlers.rs  mod.rs  proto.rs  result_builders.rs  server.rs  service.rs
sqld/src/replication/: frame.rs  http.rs  logger.rs  mod.rs  snapshot.rs
sqld/src/rpc/: mod.rs  proxy.rs  replica_proxy.rs  replication_log.rs  streaming_exec.rs
sqld/src/server/: mod.rs
sqld/src/test/: bottomless.rs  mod.rs
sqld/tests/: cluster.rs  namespaces.rs  standalone.rs  tests.rs
sqld/tests/cluster/: mod.rs
sqld/tests/embedded_replica/: mod.rs
sqld/tests/namespaces/: load_dump.rs  mod.rs
sqld/tests/standalone/: mod.rs
testing/end-to-end/: Cargo.toml
tlaplus/: wal_replication.tla
(+49 files in other folders)
