[package]
name = "sqlc"
version = "0.1.0"
edition = "2021"

[lib]
name = "sqlc"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.66"
bytes = "1.3.0"
fallible-iterator = "0.2.0"
postgres-protocol = { git = "https://github.com/sfackler/rust-postgres.git", rev = "8ab8f1a5552545986ba660cf2ad45ae2c8e54160" }
postgres-types = "0.2.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
unwrap_or = "1.0.0"
url = { version = "2.3.1", default-features = false }
