[package]
name = "libsqlx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
base64 = "0.21.2"
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.28"
hmac = "0.12.1"
hyper = { version = "0.14.27", features = ["h2", "server"] }
libsqlx = { version = "0.1.0", path = "../libsqlx" }
moka = { version = "0.11.2", features = ["future"] }
parking_lot = "0.12.1"
priority-queue = "1.3.2"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive", "rc"] }
serde_json = "1.0.100"
sha2 = "0.10.7"
sled = "0.34.7"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["v4"] }
