[package]
name = "libsqlx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-bincode = { version = "0.7.1", features = ["tokio"] }
async-trait = "0.1.71"
axum = "0.6.18"
base64 = "0.21.2"
bincode = "1.3.3"
bytes = { version =  "1.4.0", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
either = "1.8.1"
futures = "0.3.28"
hmac = "0.12.1"
humantime = "2.1.0"
hyper = { version = "0.14.27", features = ["h2", "server"] }
itertools = "0.11.0"
libsqlx = { version = "0.1.0", path = "../libsqlx", features = ["tokio"] }
moka = { version = "0.11.2", features = ["future"] }
parking_lot = "0.12.1"
priority-queue = "1.3.2"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.166", features = ["derive", "rc"] }
serde_json = "1.0.100"
sha2 = "0.10.7"
sha3 = "0.10.8"
sled = "0.34.7"
tempfile = "3.6.0"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.8"
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dev-dependencies]
turmoil = "0.5.5"
