[package]
name = "libsqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bytesize = "1.2.0"
serde = "1.0.164"
serde_json = "1.0.99"
rusqlite = { workspace = true }
anyhow = "1.0.71"
sqlite3-parser = "0.9.0"
fallible-iterator = "0.3.0"
bytes = "1.4.0"
tracing = "0.1.37"
bytemuck = { version = "1.13.1", features = ["derive"] }
parking_lot = "0.12.1"
uuid = { version = "1.4.0", features = ["v4"] }
sqld-libsql-bindings = { version = "0", path = "../sqld-libsql-bindings" }
crossbeam = "0.8.2"
thiserror = "1.0.40"
nix = "0.26.2"
crc = "3.0.1"
once_cell = "1.18.0"
regex = "1.8.4"
tempfile = "3.6.0"

[dev-dependencies]
arbitrary = { version = "1.3.0", features = ["derive"] }
itertools = "0.11.0"
rand = "0.8.5"
